--- a/frontend/src/styles/Modal.css
+++ b/frontend/src/styles/Modal.css
@@ -18,6 +18,10 @@
     animation: fadeIn 0.25s ease-in;
 }
 
+.modal-content:focus {
+    outline: none;
+}
+
 .modal-header {
     display: flex;
     justify-content: space-between;
